update url configuration

--- a/portfolio/civiclive.html
+++ b/portfolio/civiclive.html
@@ -3,20 +3,18 @@ layout: page
 title: Intrafinity - Civic Live &amp; Talentova
 ---
 
-<div class="white pt4 pb4 pt6-ns pb6-ns bg-py-red" style="border-top: 1px solid #eb695c">
-	<div class="container">
-	<div class="cf">
+<div class="white pt4 pb4 pt6-ns pb6-ns" style="background: #c3382a;">
+	<div class="container cf">
 		<div class="w-60-ns fl-ns">
 			<p class="f4 f3-ns lh-copy measure mb4 mb0-ns">I worked with Intrafinity for nearly two years as a designer and front-end developer, working on all three of their products. My role was to improve the front-end design system of their proprietary CMS and design end-to-end user experiences for their larger clients.</p>
 		</div>
-		<w class="w-30-ns fr-ns">
+		<div class="w-30-ns fr-ns">
 			<h2>Roles:</h2>
 			<p><i class="fa fa-check mr2"></i>Front-end architecture</p>
 			<p><i class="fa fa-check mr2"></i>HTML/CSS development</p>
 			<p><i class="fa fa-check mr2"></i>Product design</p>
 			<p><i class="fa fa-check mr2"></i>Visual design</p>
-		</w>
-	</div>
+		</div>
 	</div>
 </div>
 
@@ -27,7 +25,7 @@ title: Intrafinity - Civic Live &amp; Talentova
 		</div>
 		<div class="w-50-l fl-l">
 			<img src="/images/logo.civiclive.svg" width="400" />
-			<p class="f4-ns lh-copy measure">CivicLive was a branch of Intrafinity focused on making websites for municipalities and government programs all over North America.</p>
+			<p class="f4 lh-copy measure">CivicLive was a branch of Intrafinity focused on making websites for municipalities and government programs all over North America.</p>
 			<p class="lh-copy measure mb0">I met with stakeholders from local government and along with the rest of a product team translated departmental requirements into information architecture, wireframes and eventually visual design. This was then coded using HTML/CSS/JS in a proprietary CMS.</p>
 		</div>
 
@@ -39,7 +37,7 @@ title: Intrafinity - Civic Live &amp; Talentova
 		<div class="w-50-ns fl-ns">
 			<h2 class="mt0">Talentova</h2>
 			<p class="f4-ns lh-copy measure">Talentova is an enterprise learning management software designed to help mentor and onboard new employees. It’s used by large companies and governments such as Marriott, Scotiabank, Triec, the Governments of Ontario and Saskatchewan, York University and more.</p>
-			<p class="lh-copy measure">Besides designing the experience of some of these implementations, I also created a front-end system that works alongside their proprietary CMS to allow for fast development of white-label solutions. By adapting some common, modern HTML patterns we were able to cut implementation time from weeks to days.</p>
+			<p class="lh-copy measure mb4 mb-ns">Besides designing the experience of some of these implementations, I also created a front-end system that works alongside their proprietary CMS to allow for fast development of white-label solutions. By adapting some common, modern HTML patterns we were able to cut implementation time from weeks to days.</p>
 		</div>
 		<div class="w-50-ns fr-ns pl4-ns">
 			<div class="cf pt4 pb4 pa4 rounded br2" style="background: #94d894;">
@@ -54,16 +52,24 @@ title: Intrafinity - Civic Live &amp; Talentova
 
 </div>
 
-<div class="cf pt4 pb4 pt5-ns pb5-ns bg-near-black">
+<div class="cf pt4 pb4 pt5-ns pb5-ns" style="background: #e1ebf3;">
 	<div class="container container">
-		<h2 class="white">Gallery</h2>
-		<p class="f3-ns lh-copy white mb4">These are various wireframes, concepts, and mock-ups that I helped explore or produce at Intrafinity.</p>
+		<h2>Gallery</h2>
+		<p class="f3-ns lh-copy mb4">These are various wireframes, concepts, and mock-ups that I helped explore or produce at Intrafinity.</p>
 		<div class="js-intrafinity-slider">
-			<img src="/images/portfolio/intrafinity/marriot.png" />
 			<img src="/images/portfolio/intrafinity/rhr.png" />
+			<img src="/images/portfolio/intrafinity/marriot.png" />
 			<img src="/images/portfolio/intrafinity/vermont.png" />
 			<img src="/images/portfolio/intrafinity/san-diego-wireframe.png" />
 		</div>
 	</div>
 </div>
+
+
+<section class="b4 pt4 pb4 pb5-ns">
+	<div class="container">
+		{% include contact.html %}
+	</div>
+</section>
+
 
