--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -3,7 +3,7 @@ layout: page
 title: DreamHost
 ---
 
-<div class="white pt6 pb6" style="background: #061C26">
+<div class="white pt4 pb4 pt6-ns pb6-ns" style="background: #061C26">
 	<div class="container container--s tc-ns">
 		<svg class="mb3" style="margin-left: auto; margin-right: auto; max-width: 560px;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 		 viewBox="0 0 365.2 51.1" style="enable-background:new 0 0 365.2 51.1;" xml:space="preserve">
@@ -25,39 +25,39 @@ title: DreamHost
 			c-4.1,0-8,1.1-11.4,2.9c-2.2,3.5-3.4,7.6-3.5,11.7C12.8,27.6,23.3,38.4,36.6,38.7"/>
 		</svg>
 
-	<p class="f4 f3-ns lh-copy">I helped DreamHost with a number of things over 2 years, including a scalable CSS system called <a href="#" class="white dim">DreamHost.css</a>, a WordPress hosting management service called <a href="http://get.dreamhost.com/wordpress-hosting" class="white dim">DreamPress</a> and other assorted user experience fixes as needed.</p>
+	<p class="f3-ns lh-copy mb0">I helped DreamHost with a number of things over 2 years, including a scalable CSS system called <a href="#" class="white dim">DreamHost.css</a>, a WordPress hosting management service called <a href="http://get.dreamhost.com/wordpress-hosting" class="white dim">DreamPress</a> and other assorted user experience fixes as needed.</p>
 	</div>
 </div>
 
 <div class="pt5 pb5">
-	<div class="container container--s tc-ns">
-		<h1 class="mt0">DreamHost.css</h1>
-		<p class="f3 lh-copy"><em class="">Several different teams working on several different products, all needing to quickly create many different interfaces in the same style.</em></p>
-		<p class="f3 lh-copy">I helped lead the core design team in creating the first version of DreamHost's design framework.</p>
-	</div>
-
 	<div class="container">
+		<h1 class="mt0">DreamHost.css</h1>
 		<video width="100%" autoplay loop class="pt3 pb3">
 			<source src="/images/portfolio/dreamhost/dreamhost.css.mp4" type="video/mp4">
 			<img src="/images/portfolio/dreamhost/alerts.png" class="">
 		</video>
-	</div>
-
-	<div class="container container--s tc-ns">
-		<p class="f4 lh-copy measure"><a href="#">DreamHost.css</a> is a collection of single-purpose utility and layout classes alongside brand styles and interaction components. It was written in HTML and CSS so as to be as language agnostic as possible while DreamHost goes through a technical transition period.</p>
-		<a href="http://dreamhost.github.io/dreamhost.css/" class="mr4">View documentation</a>
-		<a href="http://github.com/dreamhost/dreamhost.css">See source on Github</a>
+		<div class="cf">
+			<div class="w-50-l fl-l">
+				<p class="f4 f3-ns lh-copy"><em class="">Several different teams working on several different products, all needing to quickly create many different interfaces in the same style.</em></p>
+				<p class="f3-ns lh-copy">I helped lead the core design team in creating the first version of DreamHost's design framework.</p>
+			</div>
+			<div class="w-40-l fr-l">
+				<p class="f4-ns lh-copy measure"><a href="#" class="py-link">DreamHost.css</a> is a collection of single-purpose utility and layout classes alongside brand styles and interaction components. It was written in HTML and CSS so as to be as language agnostic as possible while DreamHost goes through a technical transition period.</p>
+				<a href="http://dreamhost.github.io/dreamhost.css/" class="py-link mr4">View documentation</a>
+				<a href="http://github.com/dreamhost/dreamhost.css" class="py-link">See source on Github</a>
+			</div>
+		</div>
 	</div>
 </div>
 
 <hr style="border-bottom: 1px dotted #ddd; border-top: 0;" />
 
-<section class="pt4 pb5 pt6-ns pb6-ns">
+<section class="pt5 pb5">
 	<div class="container">
 		<h1 class="mt0">DreamPress</h1>
 		<div class="cf">
 			<div class="fl-ns w-50-ns">
-				<p class="f3 lh-copy measure">DreamPress is DreamHost's flagship product; one of Automattic's only recommended WordPress hosting services. As the first Product Designer I helped lead the development of a new dashboard and product roadmap.</p>
+				<p class="f4 f3-ns lh-copy measure"><a href="http://get.dreamhost.com/wordpress-hosting" class="py-link">DreamPress</a> is DreamHost's flagship product; one of Automattic's only recommended WordPress hosting services. As the first Product Designer I helped lead the development of a new dashboard and product roadmap.</p>
 				<p class="lh-copy measure">Starting from many interviews with past, current and future customers, we created personas and started the product from scratch. We took these personas, created flows and wireframes to meet their needs, concept tested them using UsabilityHub and coded everything using the DreamHost.css design framework.</p>
 				<p class="lh-copy measure">The result was a dashboard that reduced churn and made it easy for customers to manage what they needed, while providing a sane platform for future designers to add new features and iterate on.</p>
 			</div>
@@ -68,5 +68,12 @@ title: DreamHost
 				</div>
 			</div>
 		</div>
+	</div>
+</section>
+<hr style="border-bottom: 1px dotted #ddd; border-top: 0;" />
+
+<section id="contact" class="b4 pt4 pb4 pb5-ns">
+	<div class="container">
+		{% include contact.html %}
 	</div>
 </section>
