--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@ layout: page
 title: Design by Matt Dunn
 ---
 
-<section class="pt4 pb4 pt5-ns pb5-ns container">
-	<p class="f4 f3-m f2-l mt0 lh-copy measure">My name is Matt. I'm a Product Designer and Front-End Developer based in Ontario. Over the past 8 years I've worked with non-profits and governments, start-ups, small businesses and large ones. I really like cats, easy to use interfaces and helping teams with scalable design systems.</p>
+<section class="pt4 pb4 pt5-ns pb5-ns">
+	<div class="container container">
+	<p class="f4 f3-m f2-l mt0 lh-copy measure">My name is Matt. I'm a product designer and front-end developer based in Ontario. I really like cats, easy to use interfaces, and helping teams with scalable design systems.</p>
+	</div>
+	<div class="container">
  	<img src="images/talking-flipped.jpg" alt="Helping DreamHost analyze their design consistencies and patterns across their many products." class="mb0 mt3" />
  	<p class="mt0 pa3 pl0 brandon"><em>In my usual environment, talking with my hands and looking at variations of things.</em></p>
  	<a href="#"></a>
 </section>
-
-<section id="portfolio" class="container pb4 pb6-ns">
-	{% include latest-work.html %}
+<div id="portfolio" style="position: relative; top: -1rem;"></div> <!-- for menu link -->
+<section class="pb4 pb6-l">
+	<div class="container">
+		{% include latest-work.html %}
+	</div>
 </section>
 
-<section id="gallery" class="b4 pt4 pb4 pt6-ns pb5-ns text-center cf bg-near-black white">
+<section id="gallery" class="b4 pt4 pb4 pt6-ns pb5-ns" style="background: #e1ebf3;">
 	<div class="container">
 		{% include gallery.html %}
 	</div>
 </section>
 
-<section id="contact" class="b4 pt4 pb4 pt6-ns pb5-ns text-center cf container">
-	{% include contact.html %}
+<section id="contact" class="b4 pt4 pb4 pt6-ns pb5-ns">
+	<div class="container">
+		{% include contact.html %}
+	</div>
 </section>
-
-
