--- a/portfolio/civiclive.html
+++ b/portfolio/civiclive.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Intrafinity - Civic Live &amp; Talentova
+title: Intrafinity - Civic Live &amp; Talentova | Product Design by Matt Dunn
 ---
 
 <div class="white pt4 pb4 pt6-ns pb6-ns" style="background: #c3382a;">
