--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: DreamHost
+title: DreamHost | Product Design by Matt Dunn
 ---
 
 <div class="white pt4 pb4 pt6-ns pb6-ns" style="background: #061C26">
@@ -72,7 +72,7 @@ title: DreamHost
 </section>
 <hr style="border-bottom: 1px dotted #ddd; border-top: 0;" />
 
-<section id="contact" class="b4 pt4 pb4 pb5-ns">
+<section class="b4 pt4 pb4 pb5-ns">
 	<div class="container">
 		{% include contact.html %}
 	</div>
