update portfolio images

--- a/portfolio/civiclive.html
+++ b/portfolio/civiclive.html
@@ -60,6 +60,7 @@ title: Intrafinity - Civic Live &amp; Talentova | Product Design by Matt Dunn
 			<img src="/images/portfolio/intrafinity/rhr.png" />
 			<img src="/images/portfolio/intrafinity/marriot.png" />
 			<img src="/images/portfolio/intrafinity/vermont.png" />
+			<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.png" />
 			<img src="/images/portfolio/intrafinity/san-diego-wireframe.png" />
 		</div>
 	</div>
