update portfolio images

--- a/portfolio/civiclive.html
+++ b/portfolio/civiclive.html
@@ -55,12 +55,12 @@ title: Intrafinity - Civic Live &amp; Talentova | Product Design by Matt Dunn
 <div class="cf pt4 pb4 pt5-ns pb5-ns" style="background: #e1ebf3;">
 	<div class="container container">
 		<h2>Gallery</h2>
-		<p class="f3-ns lh-copy mb4">These are various wireframes, concepts, and mock-ups that I helped explore or produce at Intrafinity.</p>
+		<p class="f3-ns lh-copy mb4">This is a small selection of mock-ups I helped produce at Intrafinity.</p>
 		<div class="js-intrafinity-slider">
 			<img src="/images/portfolio/intrafinity/rhr.png" />
-			<img src="/images/portfolio/intrafinity/marriot.png" />
 			<img src="/images/portfolio/intrafinity/vermont.png" />
 			<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.png" />
+			<img src="/images/portfolio/intrafinity/marriot.png" />
 			<img src="/images/portfolio/intrafinity/san-diego-wireframe.png" />
 		</div>
 	</div>
