--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -62,10 +62,10 @@ title: DreamHost | Product Design by Matt Dunn
 				<p class="lh-copy measure">The result was a dashboard that reduced churn and made it easy for customers to manage what they needed, while providing a sane platform for future designers to add new features and iterate on.</p>
 			</div>
 			<div class="fl-ns w-50-ns pl4-ns">
-				<div class="dreampress-slider">
+				<video width="100%" autoplay loop class="pt3 pb3">
+					<source src="/images/portfolio/dreamhost/dreampress.mp4" type="video/mp4">
 					<img src="/images/portfolio/dreamhost/manage.png" />
-					<img src="/images/portfolio/dreamhost/import.gif" />
-				</div>
+				</video>
 			</div>
 		</div>
 	</div>
