add muted to videos

--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -32,7 +32,7 @@ title: DreamHost | Product Design by Matt Dunn
 <div class="pt5 pb5">
 	<div class="container">
 		<h1 class="mt0">DreamHost.css</h1>
-		<video width="100%" autoplay loop class="pt3 pb3">
+		<video width="100%" autoplay muted loop class="pt3 pb3">
 			<source src="/images/portfolio/dreamhost/dreamhost.css.mp4" type="video/mp4">
 			<img src="/images/portfolio/dreamhost/alerts.png" class="">
 		</video>
@@ -62,7 +62,7 @@ title: DreamHost | Product Design by Matt Dunn
 				<p class="lh-copy measure">The result was a dashboard that reduced churn and made it easy for customers to manage what they needed, while providing a sane platform for future designers to add new features and iterate on.</p>
 			</div>
 			<div class="fl-ns w-50-ns pl4-ns">
-				<video width="100%" autoplay loop class="pt3 pb3">
+				<video width="100%" autoplay muted loop class="pt3 pb3">
 					<source src="/images/portfolio/dreamhost/dreampress.mp4" type="video/mp4">
 					<img src="/images/portfolio/dreamhost/manage.png" />
 				</video>
