--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -32,10 +32,7 @@ title: DreamHost | Product Design by Matt Dunn
 <div class="pt5 pb5">
 	<div class="container">
 		<h1 class="mt0">DreamHost.css</h1>
-		<video width="100%" autoplay muted loop class="pt3 pb3">
-			<source src="/images/portfolio/dreamhost/dreamhost.css.mp4" type="video/mp4">
-			<img src="/images/portfolio/dreamhost/alerts.png" class="">
-		</video>
+		<video width="100%" autoplay muted loop src="/images/portfolio/dreamhost/dreamhost.css.mp4" poster="/images/portfolio/dreamhost/alerts.png" onclick="this.play();" class="pt3 pb3" />
 		<div class="cf">
 			<div class="w-50-l fl-l">
 				<p class="f4 f3-ns lh-copy"><em class="">Several different teams working on several different products, all needing to quickly create many different interfaces in the same style.</em></p>
@@ -62,10 +59,7 @@ title: DreamHost | Product Design by Matt Dunn
 				<p class="lh-copy measure">The result was a dashboard that reduced churn and made it easy for customers to manage what they needed, while providing a sane platform for future designers to add new features and iterate on.</p>
 			</div>
 			<div class="fl-ns w-50-ns pl4-ns">
-				<video width="100%" autoplay muted loop class="pt3 pb3">
-					<source src="/images/portfolio/dreamhost/dreampress.mp4" type="video/mp4">
-					<img src="/images/portfolio/dreamhost/manage.png" />
-				</video>
+				<video width="100%" autoplay muted loop src="/images/portfolio/dreamhost/dreampress.mp4" poster="/images/portfolio/dreamhost/manage.png" onclick="this.play();" class="pt3 pb3" />
 			</div>
 		</div>
 	</div>
