--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -25,7 +25,7 @@ title: DreamHost | Product Design by Matt Dunn
 			c-4.1,0-8,1.1-11.4,2.9c-2.2,3.5-3.4,7.6-3.5,11.7C12.8,27.6,23.3,38.4,36.6,38.7"/>
 		</svg>
 
-	<p class="f3-ns lh-copy mb0">I helped DreamHost with a number of things over 2 years, including a scalable CSS system called <a href="#" class="white dim">DreamHost.css</a>, a WordPress hosting management service called <a href="http://get.dreamhost.com/wordpress-hosting" class="white dim">DreamPress</a> and other assorted user experience fixes as needed.</p>
+	<p class="f3-ns lh-copy mb0">I helped DreamHost with a number of things over 2 years, including a scalable CSS system called <a href="https://dreamhost.github.io/dreamhost.css/" target="_blank" class="white dim">DreamHost.css</a>, a WordPress hosting management service called <a href="http://get.dreamhost.com/wordpress-hosting" class="white dim">DreamPress</a> and other assorted user experience fixes as needed.</p>
 	</div>
 </div>
 
