fix video tag on dreamhost page to stop hiding important words

--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -31,10 +31,10 @@ title: DreamHost | Product Design by Matt Dunn
 <div class="pt5 pb5">
 	<div class="container">
 		<h1 class="mt0">DreamHost.css</h1>
-		<video width="100%" autoplay muted loop src="/images/portfolio/dreamhost/dreamhost.css.mp4" poster="/images/portfolio/dreamhost/alerts.png" onclick="this.play();" class="pt3 pb3" />
+		<video width="100%" autoplay muted loop src="/images/portfolio/dreamhost/dreamhost.css.mp4" poster="/images/portfolio/dreamhost/alerts.png" onclick="this.play();" class="pt3 pb3" /></video>
 		<div class="cf">
 			<div class="w-50-l fl-l">
-				<p class="f4 f3-ns lh-copy"><em class="">Several different teams working on several different products, all needing to quickly create many different interfaces in the same style.</em></p>
+				<p class="f4 f3-ns lh-copy"><em>Several different teams working on several different products, all needing to quickly create many different interfaces in the same style.</em></p>
 				<p class="f3-ns lh-copy">I helped lead the core design team in creating the first version of DreamHost's design framework.</p>
 			</div>
 			<div class="w-40-l fr-l">
