add process section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@ title: Product Design by Matt Dunn
 </section>
 
 <div id="portfolio" style="position: relative; top: -1rem;"></div> <!-- for menu link -->
+
 <section class="pb4 pb6-l">
 	<div class="container">
 		{% include latest-work.html %}
+	</div>
+</section>
+
+<section class="pb0">
+	<div class="container">
+		{% include process.html %}
 	</div>
 </section>
 
