--- a/portfolio/dreamhost.html
+++ b/portfolio/dreamhost.html
@@ -38,7 +38,7 @@ title: DreamHost | Product Design by Matt Dunn
 				<p class="f3-ns lh-copy">I helped lead the core design team in creating the first version of DreamHost's design framework.</p>
 			</div>
 			<div class="w-40-l fr-l">
-				<p class="f4-ns lh-copy measure"><a href="#" class="py-link">DreamHost.css</a> is a collection of single-purpose utility and layout classes alongside brand styles and interaction components. It was written in HTML and CSS so as to be as language agnostic as possible while DreamHost goes through a technical transition period.</p>
+				<p class="f4-ns lh-copy measure"><a href="http://dreamhost.design" class="py-link">DreamHost.css</a> is a collection of single-purpose utility and layout classes alongside brand styles and interaction components. It was written in HTML and CSS so as to be as language agnostic as possible while DreamHost goes through a technical transition period.</p>
 				<a href="http://dreamhost.design" class="py-link mr4">View documentation</a>
 				<a href="http://github.com/dreamhost/dreamhost.css" class="py-link">See source on Github</a>
 			</div>
